# cnc

./: .clang-format  .cproject  .gitignore  .project  .~lock.Cableing CNC 2.0.xlsx#  @MAKE wxWidgets.lnk  CMakeCache.txt  CMakeList.txt  CMakeLists.db.txt  CMakeLists.debian.txt  CMakeLists.pi.txt  CMakeLists.txt  CMakeLists.ubuntu.txt  CMakeListsMain.txt  CMakeListsSourceFiles.txt  Cableing CNC 2.0.xlsx  CnCControl.batch_build  CnCControl.workspace  Common build hints.txt  Common howto hints.txt  Doxyfile  Makefile  README.md  SpeedManager.xlsx  SpeedManager2.xlsx  checkFlexGridSizer.pl  compile_commands.json  environment.bat  sample.cpp  start_cmake.sh  tags  wxcrafter-sa.perspective   
Arduino/: .cproject  .project  Arduino.mk  Arduino.project  CncController.h  CncController.ino  CncSpeedManager.h  CncStepper.h  CncStepper.ino  CncTestSuite.ino  CommonFunctions.h  CommonFunctions.ino  CommonValues.h  HowTo-arduino-cli.txt  LastErrorCodes.h  LastErrorCodes.ino  StepperControl_1.ino  cv.h
Arduino/StepperControl/: CncController.h  CncController.ino  CncSpeedController.h  CncSpeedManager - Kopie.h  CncSpeedManager.h  CncStepper.h  CncStepper.ino  CncTestSuite.h  CncTestSuite.ino  CommonFunctions.h  CommonFunctions.ino  CommonValues.h  CommonValues.h168759704233213473.tmp  CommonValues.h3306291065275124512.tmp  LastErrorCodes.h  LastErrorCodes.ino  StepperControl.ino  StepperControl.project  cv.h
Arduino/StepperEnvironment/: ArdoEnv.h  ArdoErr.h  ArdoErr.ino  ArdoObj.h  ArdoObj.h5479889085987443129.tmp  ArdoObj.ino  ArdoPin.h  ArdoVal.h  ByteBuf.h  CncAcmr.h  CncAcmr.ino  CncCtrl.h  CncCtrl.ino  CncCtrl.ino4457958600880612910.tmp  CncCtrl.ino7623982679474333370.tmp  CncPod.h  CncPod.ino  CncPwmr.h  CncPwmr.ino  CncRndr.h  CncRndr.ino  CncStep.h  CncStep.ino  CncTest.h  CncTest.ino  DecBase.h  DecGet.h  DecMov.h  DecSeq.h  DecSet.h  MainLoop.h  MainLoop.ino  StepperEnvironment.arduino.avr.uno.elf  StepperEnvironment.arduino.avr.uno.hex  StepperEnvironment.arduino.avr.uno.with_bootloader.hex  StepperEnvironment.ino
CNCGuiController/: CNCGuiController.mk  CNCGuiController.project  compile_flags.txt  main.cpp
CNCUnitTests/: CNCUnitTests.mk  CNCUnitTests.project  CNCUnitTests.txt  Test_CncPosition.cpp  Test_CncSimpleCalculator.cpp  cltmp-4NbpPmTR.txt  compile_flags.txt  main.cpp
CNCUnitTests/Release/: Test_CncPosition.cpp.o.d  Test_CncSimpleCalculator.cpp.o.d  main.cpp.o.d  run.cmd  up_CncControlerGui_CncCommon.cpp.o.d  up_CncControlerGui_CncConfig.cpp.o.d  up_CncControlerGui_CncPathListEntry.cpp.o.d  up_CncControlerGui_CncPathListManager.cpp.o.d  up_CncControlerGui_CncPosition.cpp.o.d  up_CncControlerGui_CncSimpleCalculator.cpp.o.d  up_CncControlerGui_CncVector.cpp.o.d
CncControlerGui/:  ¿E#   Ÿ£%   …ej  .gcode  @ý£%  ArduinoData.cpp  ArduinoData.h  ArduinoEnvWrapper.cpp  ArduinoEnvWrapper.h  BaseEndPoint.cpp  BaseEndPoint.h  BinaryFIleParser.h  BinaryFileParser.cpp  BinaryFileParser.h  BinaryPathHandlerBase.cpp  BinaryPathHandlerBase.h  BinaryPathHandlerCnc.cpp  BinaryPathHandlerCnc.h  CMakeLists.txt  CfgAccelerationGraph.cpp  CfgAccelerationGraph.h  CfgApplicationPage.cpp  CfgEnvironmentPage.cpp  CfgGCodeOptionPage.cpp  CfgGeneralPage.cpp  CfgSVGOptionPage.cpp  CfgWorkingPage.cpp  CircularBuffer.cpp  CircularBuffer.h  CnCControllerGui.mk  CncAnchorInfo.cpp  CncAnchorInfo.h  CncAnchorPosListCtrl.cpp  CncAnchorPosListCtrl.h  CncAnchorPosition.cpp  CncAnchorPosition.h  CncArduino.cpp  CncArduino.h  CncArduinoEnvironment.cpp  CncArduinoEnvironment.h  (+659 more)
CncControlerGui/3D/: CncGCodePreview.cpp  CncGCodePreview.h  CncGLCanvas.cpp  CncGLCanvas.h  CncMetricRulerSetup.cpp  CncMetricRulerSetup.h  GLCncPathData.cpp  GLCncPathData.h  GLCommon.cpp  GLCommon.h  GLContextBase.cpp  GLContextBase.h  GLContextCncPath.cpp  GLContextCncPath.h  GLContextCncPathBase.cpp  GLContextCncPathBase.h  GLContextGCodePreview.cpp  GLContextGCodePreview.h  GLContextPathBase.cpp  GLContextPathBase.h  GLContextTestCube.cpp  GLContextTestCube.h  GLGuidePath.cpp  GLGuidePath.h  GLHelperCamera.h  GLHelperModel.cpp  GLHelperModel.h  GLInclude.h  GLLabelCluser.cpp  GLLabelCluster.h  GLLineCluster.cpp  GLLineCluster.h  GLModelHelper.h  GLOpenGLPathBufferStore.cpp  GLOpenGLPathBufferStore.h  GLViewPort.cpp  GLViewPort.h  VerticeData.h
CncControlerGui/Codelite/: cl_aui_dock_art.cpp  cl_aui_dock_art.h  drawingutils.cpp  drawingutils.h  wxPNGAnimation.cpp  wxPNGAnimation.h
CncControllerTest/: CMakeLists.txt  CncControllerTest.mk  CncControllerTest.project  CncControllerTest.txt  FtMonitor.cpp  FtMonitor.h  compile_flags.txt  impl.cpp  impl.h  main.cpp  main_app.cpp
EnvSetupTest/: EnvSetupTest.mk  EnvSetupTest.project  EnvSetupTest.txt  MainDialog.cpp  MainDialog.h  compile_flags.txt  wxcrafter.cpp  wxcrafter.h  wxcrafter.wxcp  wxcrafter_bitmaps.cpp  wxcrafter_bitmaps.xrc
Experiments/: Experiments.mk  Experiments.project  Experiments.txt  main.cpp  main2.cpp  main_thread.cpp  mainx.cpp  mani2.cpp
FreeGlutWorkspace/: FreeGlutWorkspace.mk  FreeGlutWorkspace.project  FreeGlutWorkspace.txt  Sample1.cpp  Sample2.cpp  Sample2.h  glPositions-calculation.xlsx  global.cpp  m.sh  main.cpp  wxDummyCanvas.h
GameController/: GameController.mk  GameController.project  main.cpp
Max/: Max.project
NavigatorPanel/: CncMouseRemoteControl.cpp  CncNavigatorPanel.cpp  CncNavigatorPanel.h  MainFrame.cpp  MainFrame.h  NavigatorPanel.mk  NavigatorPanel.project  NavigatorPanel.txt  wxcrafter.cpp  wxcrafter.h  wxcrafter.wxcp  wxcrafter_bitmaps.cpp
RenderAndMove/: RenderAndMove.mk  RenderAndMove.project  main.cpp
StepperControl/: Arduino CNC Shield Setup.xlsx  CncController.h  CncController.ino  CncSpeedManager.h  CncStepper.h  CncStepper.ino  CncTestSuite.h  CommonFunctions.h  CommonFunctions.ino  CommonValues.h  StepperControl.ino
UnitTests/: Test.cpp  UnitTests.mk  UnitTests.project  UnitTests.txt  main.cpp
wxSVG/: wxSVG.mk  wxSVG.project
wxWidgetsTest/: MainFrame.cpp  wxWidgetsTest.mk  wxWidgetsTest.project  wxWidgetsTest.txt  wxcrafter.cpp  wxcrafter.h  wxcrafter.wxcp  wxcrafter_bitmaps.cpp  wxcrafter_bitmaps.xrc
(+158 files in other folders)
